[package]
name = "rusty-basic"
version = "0.1.0"
authors = ["Hyeonseok Kim <kim010322@gmail.com>"]
edition = "2021"
rust-version = "1.81.0"
description = "Tiny BASIC interpreter written in Rust"
repository = "https://github.com/plming/rusty-basic"
license = "MIT"
keywords = ["tinybasic", "compiler", "interpreter"]
categories = ["compilers", "command-line-utilities"]

[dependencies]
rustyline = "14.0.0"
